--- a/frontend/select.html
+++ b/frontend/select.html
@@ -153,7 +153,7 @@
       }
 
       try { localStorage.setItem('rg_restaurant', business); } catch (e) {}
-      window.location.href = '/review';
+      window.location.href = `/review?restaurant=${encodeURIComponent(business)}`;
     });
   </script>
 </body>
