--- a/frontend/select.html
+++ b/frontend/select.html
@@ -7,114 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --gold-main: #FDB931;
-      --gold-dark: #B48811;
-      --text-dark: #2C1810;
-      --white-glass: rgba(255, 255, 255, 0.95);
-      --bg-gradient: linear-gradient(135deg, #FFF9F0 0%, #FFF0D1 100%);
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      font-family: 'Outfit', sans-serif;
-      background: var(--bg-gradient);
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      color: var(--text-dark);
-    }
-
-    .container {
-      background: var(--white-glass);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 15px 50px rgba(180, 136, 17, 0.15);
-      border: 1px solid rgba(253, 185, 49, 0.3);
-      width: 100%;
-      max-width: 500px;
-    }
-
-    h2 {
-      text-align: center;
-      font-family: 'Playfair Display', serif;
-      color: var(--gold-dark);
-      font-size: 2rem;
-      margin-top: 0;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 15px;
-      font-weight: 600;
-      color: var(--text-dark);
-      text-align: left;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      font-size: 1rem;
-      border: 2px solid #EEE;
-      border-radius: 10px;
-      margin-top: 5px;
-      transition: border-color 0.3s;
-      font-family: 'Outfit', sans-serif;
-    }
-
-    input:focus {
-      border-color: var(--gold-main);
-      outline: none;
-    }
-
-    button {
-      padding: 14px 28px;
-      font-size: 1rem;
-      font-weight: 600;
-      background: linear-gradient(90deg, #FDB931 0%, #F5AE24 100%);
-      color: white;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      margin: 20px auto 0;
-      display: block;
-      width: 100%;
-      box-shadow: 0 4px 15px rgba(253, 185, 49, 0.3);
-      transition: transform 0.2s;
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(253, 185, 49, 0.5);
-    }
-
-    a {
-      color: var(--gold-dark);
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .back-link {
-      text-align: center;
-      display: block;
-      margin-bottom: 20px;
-      opacity: 0.7;
-    }
-
-    .back-link:hover { opacity: 1; }
-
-    #err {
-      margin-top: 16px;
-      color: #b00020;
-      display: none;
-    }
-  </style>
+  <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
   <div class="container">
